# dev-cmake

./: .gitignore  README.md  deploy.sh
00_GenericProjectStructure/src/: main.cpp
CMakeOfficialTutorial/: Notes.txt
CMakeOfficialTutorial/Complete/: CMakeLists.txt  MultiCPackConfig.cmake  run.sh
CMakeOfficialTutorial/Complete/MathFunctions/: CMakeLists.txt
CMakeOfficialTutorial/Step10_Static_Shared_PIC/: CMakeLists.txt  README.md
CMakeOfficialTutorial/Step10_Static_Shared_PIC/MathFunctions/: CMakeLists.txt  MakeTable.cmake  MathFunctions.h
CMakeOfficialTutorial/Step11_Export_Configuration/: CMakeLists.txt  Config.cmake.in  run_cpack.sh
CMakeOfficialTutorial/Step11_Export_Configuration/MathFunctions/: CMakeLists.txt
CMakeOfficialTutorial/Step12_Packaging_Debug_Release_Lin_Win/: CMakeLists.txt  License.txt  MultiCPackConfig.cmake  Tutorial-1.0-Linux.sh  Tutorial-1.0-Linux.tar.Z  TutorialConfig.h.in  run_cpack.ps1  run_cpack.sh
CMakeOfficialTutorial/Step12_Packaging_Debug_Release_Lin_Win/MathFunctions/: CMakeLists.txt
CMakeOfficialTutorial/Step4_genex/: CMakeLists.txt  run.sh
CMakeOfficialTutorial/Step4_genex/MathFunctions/: CMakeLists.txt
CMakeOfficialTutorial/Step5_install_test/: CMakeLists.txt  run_build_install_test.sh
CMakeOfficialTutorial/Step5_install_test/MathFunctions/: CMakeLists.txt
CMakeOfficialTutorial/Step6_cdash/: CMakeLists.txt  run_cdash.sh
CMakeOfficialTutorial/Step6_cdash/MathFunctions/: CMakeLists.txt
CMakeOfficialTutorial/Step7_check_css_source_compiles/MathFunctions/: CMakeLists.txt  mysqrt.cxx
CMakeOfficialTutorial/Step8_NOT_COMPLETED/: CMakeLists.txt
CMakeOfficialTutorial/Step8_NOT_COMPLETED/MathFunctions/: CMakeLists.txt
CMakeOfficialTutorial/Step9_packaging_an_installer/: CMakeLists.txt  run_cpack.sh
CMakeOfficialTutorial/Step9_packaging_an_installer/MathFunctions/: CMakeLists.txt
Other/Conan/: CMakeLists.txt  CMakeUserPresets.json  Makefile  conanfile.txt  main.cpp
Other/Gitsubmodule/: CMakeLists.txt  Makefile  run.sh
Other/Gitsubmodule/app/: CMakeLists.txt  main.cpp
Other/Gitsubmodule/cmake/: AddGitSubmodule.cmake
Other/Gitsubmodule/configured/: CMakeLists.txt  Config.hpp.in
Other/Gitsubmodule/src/MyLib/: CMakeLists.txt  MyLib.cpp  MyLib.hpp
